chore: reorganizing monorepo

--- a/services/hello_world/src/hello_world/test.ipynb
+++ b/services/hello_world/src/hello_world/test.ipynb
@@ -9,22 +9,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea2dc5f9",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "d8ac04d1-4de2-40e1-ba7e-7bb56b7a5e55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Test\")"
+    "from logging import getLogger\n",
+    "\n",
+    "getLogger().info(\"Hello World\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3a9721a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
